// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test button async click . 1`] = `
<div>
  <button
    ant-click-animating-without-extra-node="true"
    class="ant-btn"
    type="button"
  >
    <span>
      click
    </span>
  </button>
</div>
`;

exports[`test button click . 1`] = `
<div>
  <button
    ant-click-animating-without-extra-node="false"
    class="ant-btn"
    type="button"
  >
    <span>
      click
    </span>
  </button>
</div>
`;

exports[`test button no auto loading 1`] = `
<div>
  <button
    ant-click-animating-without-extra-node="true"
    class="ant-btn"
    type="button"
  >
    <span>
      click
    </span>
  </button>
</div>
`;

exports[`test button no click 1`] = `
<div>
  <button
    class="ant-btn"
    type="button"
  />
</div>
`;
